added Windows Terminal support